stop text on long toots from overflowing the status__content

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -1008,7 +1008,7 @@
   line-height: 20px;
   word-wrap: break-word;
   font-weight: 400;
-  overflow: visible;
+  overflow: hidden;
   padding-top: 5px;
   clear: both;
 
